Fix button shadows on mobile

--- a/src/mobile/components/video/video.scss
+++ b/src/mobile/components/video/video.scss
@@ -45,7 +45,7 @@ $like-anim-timing: 0.35s ease-in-out;
 			left: 50%;
 			font-size: 3.5rem;
 			transform: translate(-50%, -50%);
-			text-shadow: 0 0 3px #000;
+			text-shadow: 0 0 1px #000;
 		}
 
 		aside {
@@ -62,6 +62,7 @@ $like-anim-timing: 0.35s ease-in-out;
 				width: $pfp-size;
 				height: $pfp-size;
 				pointer-events: auto;
+				box-shadow: 0 0 1px 0px #000;
 			}
 
 			.action-btns {
@@ -71,7 +72,7 @@ $like-anim-timing: 0.35s ease-in-out;
 				gap: 16px;
 				margin-top: 24px;
 				font-size: 2.1rem;
-				text-shadow: 0 0 3px #000;
+				text-shadow: 0 0 1px #000;
 
 				> div {
 					display: flex;
